# KnowledgeTransferProject

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: utils.h
src/: CMakeLists.txt  logger.cpp  main.cpp  utils.cpp
test/: CMakeLists.txt  test.cpp
